--- a/NewShop.Data/App.config
+++ b/NewShop.Data/App.config
@@ -1,6 +1,12 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <configuration>
   <configSections>
+    <connectionStrings>
+      <clear/>
+      <add name="NewShopConnection" connectionString="Data Source=NEW\SQLEXPRESS;Initial Catalog=NewShop;Integrated Security=True"/>
+    </connectionStrings>
+      
+    
     <!-- For more information on Entity Framework configuration, visit http://go.microsoft.com/fwlink/?LinkID=237468 -->
     <section name="entityFramework" type="System.Data.Entity.Internal.ConfigFile.EntityFrameworkSection, EntityFramework, Version=6.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" requirePermission="false" />
   </configSections>
