--- a/NewShop.Data/NewShop.Data.csproj
+++ b/NewShop.Data/NewShop.Data.csproj
@@ -56,13 +56,18 @@
     <Compile Include="Infrastructure\IUnitOfWork.cs" />
     <Compile Include="Infrastructure\RepositoryBase.cs" />
     <Compile Include="Infrastructure\UnitOfWork.cs" />
-    <Compile Include="Migrations\201703070923113_InitialDB.cs" />
-    <Compile Include="Migrations\201703070923113_InitialDB.Designer.cs">
-      <DependentUpon>201703070923113_InitialDB.cs</DependentUpon>
+    <Compile Include="Migrations\201703090911377_InitialDB.cs" />
+    <Compile Include="Migrations\201703090911377_InitialDB.Designer.cs">
+      <DependentUpon>201703090911377_InitialDB.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Migrations\201703090918486_AddErrorTable.cs" />
+    <Compile Include="Migrations\201703090918486_AddErrorTable.Designer.cs">
+      <DependentUpon>201703090918486_AddErrorTable.cs</DependentUpon>
     </Compile>
     <Compile Include="Migrations\Configuration.cs" />
     <Compile Include="NewShopDbContext.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Repositories\ErrorRepository.cs" />
     <Compile Include="Repositories\FooterRepository.cs" />
     <Compile Include="Repositories\MenuGroupRepository.cs" />
     <Compile Include="Repositories\MenuRepository.cs" />
@@ -72,7 +77,7 @@
     <Compile Include="Repositories\PostCategoryRepository.cs" />
     <Compile Include="Repositories\PostRepository.cs" />
     <Compile Include="Repositories\PostTagRepository.cs" />
-    <Compile Include="Repositories\ProductCategoryRespository.cs" />
+    <Compile Include="Repositories\ProductCategoryRepository.cs" />
     <Compile Include="Repositories\ProductRepository.cs" />
     <Compile Include="Repositories\ProductTagRepository.cs" />
     <Compile Include="Repositories\SlideRepository.cs" />
@@ -96,8 +101,11 @@
     </ProjectReference>
   </ItemGroup>
   <ItemGroup>
-    <EmbeddedResource Include="Migrations\201703070923113_InitialDB.resx">
-      <DependentUpon>201703070923113_InitialDB.cs</DependentUpon>
+    <EmbeddedResource Include="Migrations\201703090911377_InitialDB.resx">
+      <DependentUpon>201703090911377_InitialDB.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\201703090918486_AddErrorTable.resx">
+      <DependentUpon>201703090918486_AddErrorTable.cs</DependentUpon>
     </EmbeddedResource>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
