--- a/NewShop.Data/App.config
+++ b/NewShop.Data/App.config
@@ -3,7 +3,7 @@
   <configSections>
     <connectionStrings>
       <clear/>
-      <add name="NewsShopConnection" connectionString="Data Source=NEW\SQLEXPRESS;Initial Catalog=NewShop;Integrated Security=True"/>
+      <add name="NewsShopConnection" providerName="System.Data.SqlClient" connectionString="Data Source=NEW\SQLEXPRESS;Initial Catalog=NewShop;Integrated Security=True"/>
     </connectionStrings>
       
     
