--- a/NewShop.Data/NewShop.Data.csproj
+++ b/NewShop.Data/NewShop.Data.csproj
@@ -38,6 +38,14 @@
       <HintPath>..\packages\EntityFramework.6.1.3\lib\net45\EntityFramework.SqlServer.dll</HintPath>
       <Private>True</Private>
     </Reference>
+    <Reference Include="Microsoft.AspNet.Identity.Core, Version=2.0.0.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35, processorArchitecture=MSIL">
+      <HintPath>..\packages\Microsoft.AspNet.Identity.Core.2.2.1\lib\net45\Microsoft.AspNet.Identity.Core.dll</HintPath>
+      <Private>True</Private>
+    </Reference>
+    <Reference Include="Microsoft.AspNet.Identity.EntityFramework, Version=2.0.0.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35, processorArchitecture=MSIL">
+      <HintPath>..\packages\Microsoft.AspNet.Identity.EntityFramework.2.2.1\lib\net45\Microsoft.AspNet.Identity.EntityFramework.dll</HintPath>
+      <Private>True</Private>
+    </Reference>
     <Reference Include="System" />
     <Reference Include="System.ComponentModel.DataAnnotations" />
     <Reference Include="System.Core" />
@@ -63,6 +71,18 @@
     <Compile Include="Migrations\201703090918486_AddErrorTable.cs" />
     <Compile Include="Migrations\201703090918486_AddErrorTable.Designer.cs">
       <DependentUpon>201703090918486_AddErrorTable.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Migrations\201703101606446_Initial.cs" />
+    <Compile Include="Migrations\201703101606446_Initial.Designer.cs">
+      <DependentUpon>201703101606446_Initial.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Migrations\201703101608196_AddErrorTable1.cs" />
+    <Compile Include="Migrations\201703101608196_AddErrorTable1.Designer.cs">
+      <DependentUpon>201703101608196_AddErrorTable1.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Migrations\201703101626128_Intergrate-AspnetIdentity.cs" />
+    <Compile Include="Migrations\201703101626128_Intergrate-AspnetIdentity.Designer.cs">
+      <DependentUpon>201703101626128_Intergrate-AspnetIdentity.cs</DependentUpon>
     </Compile>
     <Compile Include="Migrations\Configuration.cs" />
     <Compile Include="NewShopDbContext.cs" />
@@ -106,6 +126,15 @@
     </EmbeddedResource>
     <EmbeddedResource Include="Migrations\201703090918486_AddErrorTable.resx">
       <DependentUpon>201703090918486_AddErrorTable.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\201703101606446_Initial.resx">
+      <DependentUpon>201703101606446_Initial.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\201703101608196_AddErrorTable1.resx">
+      <DependentUpon>201703101608196_AddErrorTable1.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\201703101626128_Intergrate-AspnetIdentity.resx">
+      <DependentUpon>201703101626128_Intergrate-AspnetIdentity.cs</DependentUpon>
     </EmbeddedResource>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
