--- a/NewShop.Web/bower.json
+++ b/NewShop.Web/bower.json
@@ -8,7 +8,9 @@
     "fastclick": "~1.0.6",
     "jquery": "~2.2.3",
     "slimScroll": "~1.3.7",
-    "toastr": "~2.1.2"
+    "toastr": "~2.1.2",
+    "bootbox": "~4.4.0",
+    "ngBootbox": "~0.1.4"
     
    
     
