--- a/NewShop.Data/NewShop.Data.csproj
+++ b/NewShop.Data/NewShop.Data.csproj
@@ -80,6 +80,10 @@
     <Compile Include="Migrations\201703181600365_AddTagField.Designer.cs">
       <DependentUpon>201703181600365_AddTagField.cs</DependentUpon>
     </Compile>
+    <Compile Include="Migrations\201703210007158_AddContentToSlide.cs" />
+    <Compile Include="Migrations\201703210007158_AddContentToSlide.Designer.cs">
+      <DependentUpon>201703210007158_AddContentToSlide.cs</DependentUpon>
+    </Compile>
     <Compile Include="Migrations\Configuration.cs" />
     <Compile Include="NewShopDbContext.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
@@ -129,6 +133,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="Migrations\201703181600365_AddTagField.resx">
       <DependentUpon>201703181600365_AddTagField.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\201703210007158_AddContentToSlide.resx">
+      <DependentUpon>201703210007158_AddContentToSlide.cs</DependentUpon>
     </EmbeddedResource>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
