--- a/NewShop.Web/NewShop.Web.csproj
+++ b/NewShop.Web/NewShop.Web.csproj
@@ -204,8 +204,12 @@
     <Compile Include="App_Start\Startup.Auth.cs" />
     <Compile Include="App_Start\Startup.cs" />
     <Compile Include="App_Start\WebApiConfig.cs" />
+    <Compile Include="Controllers\AboutController.cs" />
+    <Compile Include="Controllers\AccountController.cs" />
     <Compile Include="Controllers\AdminController.cs" />
     <Compile Include="Controllers\HomeController.cs" />
+    <Compile Include="Controllers\PostController.cs" />
+    <Compile Include="Controllers\ProductController.cs" />
     <Compile Include="Global.asax.cs">
       <DependentUpon>Global.asax</DependentUpon>
     </Compile>
@@ -214,12 +218,14 @@
     <Compile Include="Infrastructure\Extensions\EntityExtensions.cs" />
     <Compile Include="Mappings\AutoMapperConfiguration.cs" />
     <Compile Include="Models\FooterViewModel.cs" />
+    <Compile Include="Models\HomeViewModel.cs" />
     <Compile Include="Models\PostCategoryViewModel.cs" />
     <Compile Include="Models\PostTagViewModel.cs" />
     <Compile Include="Models\PostViewModel.cs" />
     <Compile Include="Models\ProductCategoryViewModel.cs" />
     <Compile Include="Models\ProductTagViewModel.cs" />
     <Compile Include="Models\ProductViewModel.cs" />
+    <Compile Include="Models\SlideViewModel.cs" />
     <Compile Include="Models\TagViewModel.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
@@ -4093,7 +4099,11 @@
     <Content Include="fonts\glyphicons-halflings-regular.svg" />
     <Content Include="Global.asax" />
     <Content Include="Libs\CKFinder.dll" />
-    <Content Include="UploadedFiles\images\LOGOTEDU.jpg" />
+    <Content Include="UploadedFiles\files\2017-03-18_101641.png" />
+    <Content Include="UploadedFiles\images\ba - Copy - Copy.jpg" />
+    <Content Include="UploadedFiles\images\bo.jpg" />
+    <Content Include="UploadedFiles\images\ch.jpg" />
+    <Content Include="UploadedFiles\images\s4.jpg" />
     <Content Include="UploadedFiles\_thumbs\Images\LOGOTEDU.jpg" />
     <Content Include="Web.config" />
     <Content Include="Web.Debug.config">
@@ -4111,6 +4121,7 @@
     <Folder Include="app\shared\services\footer\" />
     <Folder Include="App_Data\" />
     <Folder Include="Scripts\" />
+    <Folder Include="UploadedFiles\flash\" />
   </ItemGroup>
   <ItemGroup>
     <Content Include="fonts\glyphicons-halflings-regular.woff" />
