--- a/NewShop.Data/NewShop.Data.csproj
+++ b/NewShop.Data/NewShop.Data.csproj
@@ -92,9 +92,14 @@
     <Compile Include="Migrations\201703211129375_addforiekey.Designer.cs">
       <DependentUpon>201703211129375_addforiekey.cs</DependentUpon>
     </Compile>
+    <Compile Include="Migrations\201703211440287_ContactDetail.cs" />
+    <Compile Include="Migrations\201703211440287_ContactDetail.Designer.cs">
+      <DependentUpon>201703211440287_ContactDetail.cs</DependentUpon>
+    </Compile>
     <Compile Include="Migrations\Configuration.cs" />
     <Compile Include="NewShopDbContext.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Repositories\ContactDetailRepository.cs" />
     <Compile Include="Repositories\ErrorRepository.cs" />
     <Compile Include="Repositories\FooterRepository.cs" />
     <Compile Include="Repositories\MenuGroupRepository.cs" />
@@ -150,6 +155,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="Migrations\201703211129375_addforiekey.resx">
       <DependentUpon>201703211129375_addforiekey.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\201703211440287_ContactDetail.resx">
+      <DependentUpon>201703211440287_ContactDetail.cs</DependentUpon>
     </EmbeddedResource>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
