--- a/NewShop.Web/AppSettings.config
+++ b/NewShop.Web/AppSettings.config
@@ -5,4 +5,11 @@
   <add key="UnobtrusiveJavaScriptEnabled" value="true" />
   <add key="PageSize" value="20"/>
   <add key="MaxPage" value="5"/>
+
+  <add key="SMTPHost" value="smtp.gmail.com"/>
+  <add key="SMTPPort" value="587"/>
+  <add key="FromEmailAddress" value="chaungoctan95@gmail.com"/>
+  <add key="FromEmailPassword" value="NgocTan296"/>
+  <add key="FromName" value="NewShop"/>
+  <add key="AdminEmail" value="chaungoctan95@gmail.com"/>
 </appSettings>
