tạo đăng ký đăng nhập

--- a/NewShop.Web/AppSettings.config
+++ b/NewShop.Web/AppSettings.config
@@ -11,5 +11,6 @@
   <add key="FromEmailAddress" value="chaungoctan95@gmail.com"/>
   <add key="FromEmailPassword" value="NgocTan296"/>
   <add key="FromName" value="NewShop"/>
-  <add key="AdminEmail" value="chaungoctan95@gmail.com"/>
+  <add key="AdminEmail" value="NewShop@gmail.com"/>
+  <add key="CurrentLink" value="http://localhost:57374/"/>
 </appSettings>
