--- a/NewShop.Web/packages.config
+++ b/NewShop.Web/packages.config
@@ -5,6 +5,7 @@
   <package id="Autofac.Mvc5" version="4.0.1" targetFramework="net451" />
   <package id="Autofac.WebApi2" version="4.0.1" targetFramework="net451" />
   <package id="AutoMapper" version="4.2.1" targetFramework="net451" />
+  <package id="Boilerplate.Web.Mvc5" version="1.0.25" targetFramework="net451" />
   <package id="bootstrap" version="3.0.0" targetFramework="net451" />
   <package id="Captcha" version="4.1.0" targetFramework="net451" />
   <package id="EntityFramework" version="6.1.3" targetFramework="net451" />
